#1 Add support for excluding branches in catch-all